--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>manage-system</title>
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
-    <meta name="keywords" content="vue.js, wms, vue2, 后台模板, 管理系统, element" />
-    <meta name="description" content="基于Vue2 + Element UI 的后台管理系统解决方案" />
+    <meta name="keywords" content="vue.js, wms, vue2, 后台模板, 管理系统, element, 记录数据，比如减肥体重数据,走路步数,日常喝水杯数记录" />
+    <meta name="description" content="记录数据，比如减肥体重数据,走路步数,日常喝水杯数记录" />
 </head>
 <body>
 <div id="app"></div>
